# BitSerializer

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  History.md  README.md  bitserializer.sln  cpp.hint  license.txt  vcpkg.json
archives/bitserializer_cpprest_json/: CMakeLists.txt  cpprest_json_archive.h
archives/bitserializer_rapidjson/: CMakeLists.txt  rapidjson_archive.h
benchmarks/archives/: CMakeLists.txt  base_perf_test.h  base_test_models.h  benchmark_base.cpp  benchmark_base.h  bitserializer_benchmark.h  cpprest_json_benchmark.h  cpprest_json_performance_test.h  csv_benchmark.h  csv_performance_test.h  main.cpp  msgpack_benchmark.h  pugixml_benchmark.h  pugixml_performance_test.h  rapid_json_benchmark.h  rapid_json_performance_test.h  rapid_yaml_benchmark.h  rapid_yaml_performance_test.h  test_model.h
include/bitserializer/: CMakeLists.txt  bit_serializer.h  config.h  convert.h  cpprestjson_archive.h  csv_archive.h  export.h  key_value.h  msgpack_archive.h  pugixml_archive.h  rapidjson_archive.h  rapidyaml_archive.h  refine.h  string_conversion.h  validate.h
samples/: CMakeLists.txt  hello_world.cpp
samples/hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.vcxproj  hello_world.vcxproj.filters
samples/msgpack_vs_json/: CMakeLists.txt  msgpack_vs_json.cpp
samples/multiformat_customization/: CMakeLists.txt  multiformat_customization.cpp  multiformat_customization.vcxproj  multiformat_customization.vcxproj.filters
samples/payload_passthrough/: CMakeLists.txt  payload_passthrough.cpp
samples/serialize_custom_array/: CMakeLists.txt  serialize_custom_array.cpp
samples/serialize_custom_string/: CMakeLists.txt  serialize_custom_string.cpp
samples/serialize_map_to_yaml/: CMakeLists.txt  serialize_map_to_yaml.cpp
samples/serialize_third_party_class/: CMakeLists.txt  serialize_third_party_class.cpp  serialize_third_party_class.vcxproj  serialize_third_party_class.vcxproj.filters
samples/serialize_to_csv/: CMakeLists.txt  serialize_to_csv.cpp
samples/serialize_to_stream/: CMakeLists.txt  serialize_to_stream.cpp  serialize_to_stream.vcxproj  serialize_to_stream.vcxproj.filters
samples/serialize_xml_attributes/: CMakeLists.txt  serialize_xml_attributes.cpp  serialize_xml_attributes.filters  serialize_xml_attributes.vcxproj
samples/string_conversions/: CMakeLists.txt  string_conversions.cpp
samples/validation/: CMakeLists.txt  validation.cpp  validation.vcxproj  validation.vcxproj.filters
samples/versioning/: CMakeLists.txt  versioning.cpp
src/common/: CMakeLists.txt  binary_stream_reader.cpp  binary_stream_reader.h
src/testing_tools/: CMakeLists.txt  archive_stub.h  auto_fixture.h  bin_archive_stub.h  common_json_test_methods.h  common_test_entities.h  common_test_methods.h  common_xml_test_methods.h  common_yaml_test_methods.h  gtest_asserts.h  perf_utils.cpp  perf_utils.h  string_utils.h
tests/: CMakeLists.txt  auto_fixture.h  common_test_entities.h  common_test_methods.h  json_restcpp_archive_tests.cpp  pch.h  serialization_archive_traits_tests.cpp  serialization_containers_tests.cpp  serialization_object_traits_tests.cpp  serialization_stl_types_tests.cpp  stl_containers_tests.cpp  string_conversion_tests.cpp  validators_tests.cpp
tests/acceptance_tests/: CMakeLists.txt
tests/bitserializer-core-tests/: CMakeLists.txt  bitserializer_core_tests.vcxproj  bitserializer_core_tests.vcxproj.filters  json_restcpp_archive_tests.cpp  pch.h  serialization_containers_tests.cpp  serialization_stl_types_tests.cpp  string_conversion_tests.cpp
tests/bitserializer-json-restcpp-tests/: bitserializer_json_restcpp_tests.vcxproj  json_restcpp_archive_tests.cpp
tests/bitserializer_common_tests/: CMakeLists.txt  binary_stream_reader_fixture.h  binary_stream_reader_tests.cpp
tests/bitserializer_conversions_tests/: CMakeLists.txt  convert_api_tests.cpp  convert_chrono_tests.cpp  convert_classes_tests.cpp  convert_custom_string_tests.cpp  convert_enums_tests.cpp  convert_filesystem_tests.cpp  convert_fundamentals_tests.cpp  convert_std_tests.cpp  convert_traits_tests.cpp  convert_transcoding_tests.cpp  detect_encodings_fixture.h  detect_encodings_tests.cpp  encoded_stream_reader_fixture.h  encoded_stream_reader_tests.cpp  encoded_stream_writer_fixture.h  encoded_stream_writer_tests.cpp  utf16_encoding_tests.cpp  utf16be_encoding_tests.cpp  utf16le_encoding_tests.cpp  utf32_encoding_tests.cpp  utf32be_encoding_tests.cpp  utf32le_encoding_tests.cpp  utf8_encoding_tests.cpp  utf_transcoding_tests.cpp
tests/bitserializer_core_tests/: CMakeLists.txt  archive_base_tests.cpp  attribute_value_tests.cpp  bin_timestamp_tests.cpp  bitserializer_core_tests.vcxproj  bitserializer_core_tests.vcxproj.filters  key_value_tests.cpp  pch.h  serialization_archive_traits_tests.cpp  serialization_base_types_tests.cpp  serialization_containers_tests.cpp  serialization_ctime_tests.cpp  serialization_object_traits_tests.cpp  serialization_std_chrono_tests.cpp  serialization_std_containers_tests.cpp  serialization_std_filesystem_tests.cpp  serialization_std_pmr_containers_tests.cpp  serialization_std_types_tests.cpp  serialization_stl_types_tests.cpp  string_conversion_tests.cpp  utf16_encoding_tests.cpp  utf8_encoding_tests.cpp  validators_tests.cpp
tests/bitserializer_cpprest_json_tests/: CMakeLists.txt  bitserializer_cpprest_json_tests.vcxproj  bitserializer_cpprest_json_tests.vcxproj.filters  cpprest_json_archive_tests.cpp
tests/bitserializer_csv_tests/: CMakeLists.txt  csv_archive_fixture.h  csv_archive_tests.cpp  csv_reader_fixture.h  csv_reader_tests.cpp  csv_writer_fixture.h  csv_writer_tests.cpp
tests/bitserializer_json_restcpp_tests/: CMakeLists.txt  bitserializer_json_restcpp_tests.vcxproj  bitserializer_json_restcpp_tests.vcxproj.filters  json_restcpp_archive_tests.cpp
tests/bitserializer_msgpack_tests/: CMakeLists.txt  msgpack_archive_fixture.h  msgpack_archive_tests.cpp  msgpack_reader_fixture.h  msgpack_reader_tests.cpp  msgpack_writer_fixture.h  msgpack_writer_tests.cpp
tests/bitserializer_pugixml_tests/: CMakeLists.txt  (+3 more)
(+272 files in other folders)
